src/test/deca/context/invalid/provided/variable-deja-declare.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 13: Variable deja declare
// 
// Historique:
//    cree le 01/01/2024

{
   int a;
   int b;
   bool a;
}
